--- a/p1.ipynb
+++ b/p1.ipynb
@@ -159,34 +159,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Jabawan No.4\n",
-      "Series:\n",
-      " a    10\n",
-      "b    20\n",
-      "c     5\n",
-      "d    30\n",
-      "e    25\n",
-      "dtype: int64\n",
-      "Indeks nilai maksimum pertama: d\n",
-      "\n",
-      "Jabawan No.5\n",
-      "Series:\n",
-      " a    10\n",
-      "b    20\n",
-      "c     5\n",
-      "d    30\n",
-      "e    25\n",
-      "dtype: int64\n",
-      "Indeks nilai minimum pertama: c\n",
-      "\n",
-      "Jabawan No.6\n",
       "Series Awal:\n",
       " a    10\n",
       "b    20\n",
@@ -194,7 +173,15 @@
       "d    30\n",
       "e    25\n",
       "dtype: int64\n",
-      "Indeks nilai berurutan dari yang terkecil: a    2\n",
+      "Jabawan No.4\n",
+      "Indeks nilai maksimum pertama: d\n",
+      "\n",
+      "Jabawan No.5\n",
+      "Indeks nilai minimum pertama: c\n",
+      "\n",
+      "Jabawan No.6\n",
+      "Indeks nilai berurutan dari yang terkecil:\n",
+      "a    2\n",
       "b    0\n",
       "c    1\n",
       "d    4\n",
@@ -213,17 +200,16 @@
     "\n",
     "index_urut = s.argsort() #mengembalikan index dengan urut mulai dari yang terkecil ke terbesar NO.6 \n",
     "\n",
+    "print(\"Series Awal:\\n\", s)\n",
     "print(\"Jabawan No.4\")\n",
-    "print(\"Series:\\n\", s)\n",
     "print(\"Indeks nilai maksimum pertama:\", indeks_max)\n",
     "\n",
     "print(\"\\nJabawan No.5\")\n",
-    "print(\"Series:\\n\",s)\n",
     "print(\"Indeks nilai minimum pertama:\", index_min)\n",
     "\n",
     "print(\"\\nJabawan No.6\")\n",
-    "print(\"Series Awal:\\n\", s)\n",
-    "print(\"Indeks nilai berurutan dari yang terkecil:\", index_urut)\n"
+    "print(\"Indeks nilai berurutan dari yang terkecil:\")\n",
+    "print(index_urut)\n"
    ]
   },
   {
@@ -392,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -414,8 +400,11 @@
       "3    35\n",
       "4    45\n",
       "dtype: int64\n",
+      "\n",
+      "Jawaban No. 9\n",
       "Covariance antara Series 1 dan Series 2: 250.0\n",
       "\n",
+      "Jawaban No. 10\n",
       "Hasil Pembagian:\n",
       "0    2.200000\n",
       "1    1.400000\n",
@@ -424,6 +413,7 @@
       "4    1.133333\n",
       "dtype: float64\n",
       "\n",
+      "Jawaban No. 11\n",
       "Hasil Perkalian Titik antara Dua Data Series: 4875\n"
      ]
     }
@@ -450,14 +440,17 @@
     "print(\"\\nSeries 2:\")\n",
     "print(s2)\n",
     "\n",
+    "print(\"\\nJawaban No. 9\")\n",
     "print(\"Covariance antara Series 1 dan Series 2:\", covariance)  #No. 9\n",
     "\n",
     "#No. 10\n",
-    "print(\"\\nHasil Pembagian:\")\n",
+    "print(\"\\nJawaban No. 10\")\n",
+    "print(\"Hasil Pembagian:\")\n",
     "print(bagi)\n",
     "\n",
     "#No. 11\n",
-    "print(\"\\nHasil Perkalian Titik antara Dua Data Series:\", dot_product)"
+    "print(\"\\nJawaban No. 11\")\n",
+    "print(\"Hasil Perkalian Titik antara Dua Data Series:\", dot_product)"
    ]
   },
   {
@@ -471,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -486,6 +479,7 @@
       "e    51\n",
       "dtype: int64\n",
       "\n",
+      "Jawaban No. 13\n",
       "Series setelah menghapus index 'b':\n",
       "a    11\n",
       "c    31\n",
@@ -493,6 +487,7 @@
       "e    51\n",
       "dtype: int64\n",
       "\n",
+      "Jawaban No. 13\n",
       "Series dengan Duplikasi:\n",
       "0    10\n",
       "1    20\n",
@@ -530,12 +525,14 @@
     "print(\"Series Asli:\")\n",
     "print(s1)\n",
     "\n",
-    "print(\"\\nSeries setelah menghapus index 'b':\")\n",
+    "print(\"\\nJawaban No. 13\")\n",
+    "print(\"Series setelah menghapus index 'b':\")\n",
     "print(s_drop)\n",
     "\n",
     "\n",
     "#No. 13\n",
-    "print(\"\\nSeries dengan Duplikasi:\")\n",
+    "print(\"\\nJawaban No. 13\")\n",
+    "print(\"Series dengan Duplikasi:\")\n",
     "print(s2)\n",
     "\n",
     "print(\"\\nSeries setelah Menghapus Duplikasi:\")\n",
@@ -1184,6 +1181,427 @@
     "print(\"\\nJawaban No. 29\")\n",
     "print(\"Data Series yang telah dihapus: \")\n",
     "print(hapus)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "30. pow() Mengembalikan hasil pangkat dari data series pertama\n",
+    "dengan data series kedua"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Series pertama: \n",
+      "a    2\n",
+      "b    3\n",
+      "c    4\n",
+      "d    5\n",
+      "dtype: int64\n",
+      "\n",
+      "Data Series pertama: \n",
+      "a    3\n",
+      "b    2\n",
+      "c    1\n",
+      "d    0\n",
+      "dtype: int64\n",
+      "\n",
+      "Jawaban No. 30\n",
+      "Hasil pangkat kedua series: \n",
+      "a    8\n",
+      "b    9\n",
+      "c    4\n",
+      "d    1\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "s1 = pd.Series([2, 3, 4, 5], index=['a', 'b', 'c', 'd'])\n",
+    "s2 = pd.Series([3, 2, 1, 0], index=['a', 'b', 'c', 'd'])\n",
+    "\n",
+    "pangkat = s1.pow(s2)\n",
+    "\n",
+    "print(\"Data Series pertama: \")\n",
+    "print (s1)\n",
+    "\n",
+    "print(\"\\nData Series pertama: \")\n",
+    "print (s2)\n",
+    "\n",
+    "print(\"\\nJawaban No. 30\")\n",
+    "print(\"Hasil pangkat kedua series: \")\n",
+    "print (pangkat)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "31. replace(x, val) Menggantikan data series ke-x dengan nilai val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Series: \n",
+      "0    10\n",
+      "1    20\n",
+      "2    30\n",
+      "3    40\n",
+      "4    50\n",
+      "dtype: int64\n",
+      "\n",
+      "Jawaban No. 31\n",
+      "Data Series yang telah diganti: \n",
+      "0    110\n",
+      "1     20\n",
+      "2     30\n",
+      "3     40\n",
+      "4     50\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Membuat Series\n",
+    "s = pd.Series([10, 20, 30, 40, 50])\n",
+    "\n",
+    "ganti = s.replace(10,110)\n",
+    "\n",
+    "print(\"Data Series: \")\n",
+    "print(s)\n",
+    "print(\"\\nJawaban No. 31\")\n",
+    "print(\"Data Series yang telah diganti: \")\n",
+    "print(ganti)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "32. sort_values()\n",
+    "Mengurutkan elemen data series dengan default nilai menaik.\n",
+    "Untuk nilai menurun menggunakan parameter ascending =\n",
+    "False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series Asli:\n",
+      "0    67\n",
+      "1    99\n",
+      "2    30\n",
+      "3    20\n",
+      "4    50\n",
+      "dtype: int64\n",
+      "\n",
+      "Jawaban No. 32\n",
+      "Series setelah diurutkan secara menaik:\n",
+      "3    20\n",
+      "2    30\n",
+      "4    50\n",
+      "0    67\n",
+      "1    99\n",
+      "dtype: int64\n",
+      "\n",
+      "Series setelah diurutkan secara menurun:\n",
+      "1    99\n",
+      "0    67\n",
+      "4    50\n",
+      "2    30\n",
+      "3    20\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "s = pd.Series([67, 99, 30, 20, 50])\n",
+    "\n",
+    "#mengurutkan nilai secara menaik (default: ascending=True)\n",
+    "s_sorted = s.sort_values()\n",
+    "\n",
+    "#mengurutkan nilai secara menurun\n",
+    "s_sorted_desc = s.sort_values(ascending=False)\n",
+    "\n",
+    "print(\"Series Asli:\")\n",
+    "print(s)\n",
+    "\n",
+    "print(\"\\nJawaban No. 32\")\n",
+    "print(\"Series setelah diurutkan secara menaik:\")\n",
+    "print(s_sorted)\n",
+    "\n",
+    "print(\"\\nSeries setelah diurutkan secara menurun:\")\n",
+    "print(s_sorted_desc)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "33. std() Menghitung nilai standar deviasi dari suatu data series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Series: \n",
+      "0    67\n",
+      "1    99\n",
+      "2    30\n",
+      "3    20\n",
+      "4    50\n",
+      "dtype: int64\n",
+      "\n",
+      "Jawaban No. 33\n",
+      "Standar Deviasi: 15.385057685949702\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "s3 = pd.Series([67, 99, 30, 20, 50])\n",
+    "\n",
+    "#menghitung standar deviasi\n",
+    "dev = s.std()\n",
+    "\n",
+    "print(\"Data Series: \")\n",
+    "print(s3)\n",
+    "print(\"\\nJawaban No. 33\")\n",
+    "print(\"Standar Deviasi:\", dev)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "34. sub() Mengembalikan hasil selisi data series pertama dengan data\n",
+    "series kedua"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Series 1: \n",
+      "0    67\n",
+      "1    99\n",
+      "2    30\n",
+      "3    20\n",
+      "4    50\n",
+      "dtype: int64\n",
+      "Data Series 2: \n",
+      "0    7\n",
+      "1    9\n",
+      "2    3\n",
+      "3    2\n",
+      "4    5\n",
+      "dtype: int64\n",
+      "\n",
+      "Jawaban No. 34\n",
+      "Selisih Data Series Pertama dan Kedua:\n",
+      "0    60\n",
+      "1    90\n",
+      "2    27\n",
+      "3    18\n",
+      "4    45\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "s1 = pd.Series([67, 99, 30, 20, 50])\n",
+    "s2 = pd.Series([7, 9, 3, 2, 5])\n",
+    "\n",
+    "#mengembalikan nilai selisih dari series pertama dan kedua\n",
+    "balikin = s1.sub(s2)\n",
+    "\n",
+    "print(\"Data Series 1: \")\n",
+    "print(s1)\n",
+    "\n",
+    "print(\"Data Series 2: \")\n",
+    "print(s2)\n",
+    "\n",
+    "print(\"\\nJawaban No. 34\")\n",
+    "print(\"Selisih Data Series Pertama dan Kedua:\")\n",
+    "print(balikin)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "35. sum() Menghitung jumlah total data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Series: \n",
+      "0    67\n",
+      "1    99\n",
+      "2    30\n",
+      "3    20\n",
+      "4    50\n",
+      "5     9\n",
+      "6     1\n",
+      "7    20\n",
+      "8    11\n",
+      "dtype: int64\n",
+      "\n",
+      "Jawaban No. 35\n",
+      "Jumlah Total Data: 307\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "s1 = pd.Series([67, 99, 30, 20, 50, 9, 1, 20, 11])\n",
+    "\n",
+    "#menghitung jumlah total data\n",
+    "total = s1.sum()\n",
+    "\n",
+    "print(\"Data Series: \")\n",
+    "print(s1)\n",
+    "print(\"\\nJawaban No. 35\")\n",
+    "print(\"Jumlah Total Data:\", total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "36. to_dict() Mengkonversi data series kedalam bentuk dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series:\n",
+      "a    100\n",
+      "b    200\n",
+      "c    300\n",
+      "dtype: int64\n",
+      "\n",
+      "Jawaban No. 36\n",
+      "Hasil Konversi ke Dictionary:\n",
+      "{'a': 100, 'b': 200, 'c': 300}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "s = pd.Series([100, 200, 300], index=['a', 'b', 'c'])\n",
+    "\n",
+    "#mengkonversi ke dictionary\n",
+    "s_dict = s.to_dict()\n",
+    "\n",
+    "print(\"Series:\")\n",
+    "print(s)\n",
+    "\n",
+    "print(\"\\nJawaban No. 36\")\n",
+    "print(\"Hasil Konversi ke Dictionary:\")\n",
+    "print(s_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "37. tolist() Mengkonversi data series kedalam bentuk list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Series:\n",
+      "0     3\n",
+      "1    34\n",
+      "2    19\n",
+      "3    42\n",
+      "4    33\n",
+      "dtype: int64\n",
+      "\n",
+      "Jawaban No. 37\n",
+      "Hasil Konversi ke List:\n",
+      "[3, 34, 19, 42, 33]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "s = pd.Series([3, 34, 19, 42, 33])\n",
+    "\n",
+    "#mengkonversi ke list\n",
+    "s_list = s.tolist()\n",
+    "\n",
+    "print(\"Series:\")\n",
+    "print(s)\n",
+    "\n",
+    "print(\"\\nJawaban No. 37\")\n",
+    "print(\"Hasil Konversi ke List:\")\n",
+    "print(s_list)\n"
    ]
   }
  ],
